--- a/public/index.html
+++ b/public/index.html
@@ -6,35 +6,45 @@
     <title>SWaT 高级仪表盘</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-</head><body>
+</head>
+<body>
     <header>
-        <h1>SWaT 智能水处理高级仪表盘</h1>
-        <!-- 时间和播放控制 -->
-        <div id="controls">
-            <button id="play-pause-btn" title="播放/暂停"><i class="fas fa-play"></i></button>
-            <select id="speed-control" title="播放速度">
-                <option value="0.5">0.5x</option>
-                <option value="1" selected>1x (实时)</option>
-                <option value="1.5">1.5x</option>
-                <option value="2">2x</option>
-            </select>
-            <input type="range" id="time-slider" min="0" value="0" title="时间轴">
-            <span id="timestamp-display">正在加载...</span>
-            <div class="time-input-container">
-                <input type="datetime-local" id="manual-time-input" step="1">
-                <button id="jump-to-time-btn" title="跳转到指定时间">跳转</button>
+        <div id="header-collapsible-content">
+            <h1>SWaT 智能水处理高级仪表盘</h1>
+            <div id="controls">
+                <button id="play-pause-btn" title="播放/暂停"><i class="fas fa-play"></i></button>
+                <select id="speed-control" title="播放速度">
+                    <option value="0.5">0.5x</option>
+                    <option value="1" selected>1x (实时)</option>
+                    <option value="1.5">1.5x</option>
+                    <option value="2">2x</option>
+                </select>
+                <input type="range" id="time-slider" min="0" value="0" title="时间轴">
+                <span id="timestamp-display">正在加载...</span>
+                <div class="time-input-container">
+                    <input type="datetime-local" id="manual-time-input" step="1">
+                    <button id="jump-to-time-btn" title="跳转到指定时间">跳转</button>
+                </div>
+                <button id="filter-btn" title="筛选设备"><i class="fas fa-filter"></i> 筛选</button>
             </div>
-            <button id="filter-btn" title="筛选设备"><i class="fas fa-filter"></i> 筛选</button>
+            <div id="attack-display">
+                <strong>状态:</strong> 
+                <span id="attack-status">正常</span>
+                <span id="attack-info-wrapper" class="hidden">
+                    | <strong>攻击ID:</strong> <span id="attack-id"></span>
+                    | <strong>详情:</strong> <span id="attack-details"></span>
+                </span>
+            </div>
         </div>
-        <!-- 攻击信息显示 -->
-        <div id="attack-display">
-            <strong>状态:</strong> 
-            <span id="attack-status">正常</span>
-            <span id="attack-info-wrapper" style="display: none;">
-                | <strong>攻击ID:</strong> <span id="attack-id"></span>
-                | <strong>详情:</strong> <span id="attack-details"></span>
-            </span>
+        
+        <div id="header-collapsed-view" class="hidden">
+             <span id="collapsed-timestamp"></span>
+             <span id="collapsed-attack-status"></span>
         </div>
+
+        <button id="header-toggle-btn" title="折叠/展开控制面板">
+            <i class="fas fa-chevron-up"></i>
+        </button>
     </header>
 
     <main class="dashboard-container">
