feat: 快速定位到对应攻击

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,10 @@
                     <input type="datetime-local" id="manual-time-input" step="1">
                     <button id="jump-to-time-btn" title="跳转到指定时间">跳转</button>
                 </div>
+                <!-- New Attack List Dropdown -->
+                <select id="attack-list" title="跳转到攻击">
+                    <option value="">选择攻击跳转...</option>
+                </select>
                 <button id="filter-btn" title="筛选设备"><i class="fas fa-filter"></i> 筛选</button>
             </div>
             <div id="attack-display">
